fixing rebooting game functionality